@@ -1,6 +1,6 @@
 {
-  "timestamp" : "2022-03-28T00:32:14Z",
-  "count" : 16,
+  "timestamp" : "2022-04-10T00:34:39Z",
+  "count" : 15,
   "count_minmax" : [ 0, 16 ],
   "count_prev_day_inc" : 13,
   "count_prev_day_dec" : 0,
