@@ -1,0 +1,11 @@
+{
+  "timestamp" : "2022-04-10T00:34:39Z",
+  "count" : 0,
+  "count_minmax" : [ 0, 0 ],
+  "count_prev_day_inc" : 0,
+  "count_prev_day_dec" : 1,
+  "uniques" : 0,
+  "uniques_minmax" : [ 0, 0 ],
+  "uniques_prev_day_inc" : 0,
+  "uniques_prev_day_dec" : 0
+}
