@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-04-09T16:09:02Z",
+  "timestamp" : "2022-04-10T00:34:39Z",
   "count_outdated" : 657,
   "uniques_outdated" : 40,
-  "count" : 959,
+  "count" : 958,
   "uniques" : 55,
   "views" : [
     {
       "timestamp": "2022-03-27T00:00:00Z",
-      "count": 16,
+      "count": 15,
       "count_minmax": [ 0, 16 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
