@@ -1,3 +1,9 @@
+2022-04-10T00:34:39Z:
+* notice: last 14d: all unq: 301 2
+* notice: prev accum: outdated-all outdated-unq / all unq: 657 40 / 959 55
+* notice: next accum: outdated-all outdated-unq / all unq: 657 40 / 958 55
+* notice: prev json diff // prev day diff: unq all: +0 +0 / -0 -1 // +0 +0 / -0 -1
+
 2022-04-09T16:09:02Z:
 * notice: last 14d: all unq: 302 2
 * notice: prev accum: outdated-all outdated-unq / all unq: 613 39 / 937 54
